# Nexus-Hosting

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md
.github/workflows/: ci.yml  deploy.yml
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/api-server/src/lib/: acme.ts  analyticsFlush.ts  bootstrapSeed.ts  conflictResolution.ts  contentScanner.ts  domainCache.ts  email.ts  emailVerification.ts  errors.ts  federation.ts  geoRouting.ts  healthMonitor.ts  logger.ts  metricsCollector.ts  nexusCloudClient.ts  objectStorage.ts  orphanCleanup.ts  pagination.ts  plans.ts  processManager.ts  resourceConfig.ts  seedBundledSites.ts  siteHealthMonitor.ts  storageProvider.ts  syncRetryQueue.ts  webhooks.ts
artifacts/api-server/src/middleware/: errorHandler.ts  hostRouter.ts  ipBan.ts  rateLimiter.ts  requireAdmin.ts  tokenAuth.ts
artifacts/cli/: README.md  package.json  tsconfig.json
artifacts/cli/src/: api.ts  config.ts  index.ts
artifacts/federated-hosting/: index.html  package.json  requirements.yaml
artifacts/federated-hosting/.replit-artifact/: artifact.toml
artifacts/federated-hosting/public/: password-gate.html
artifacts/federated-hosting/src/: App.tsx  index.css  main.tsx
attached_assets/: Pasted-A-federated-hosting-service-No-a-fully-federated-hostin_1773911005530.txt
crates/fedhost-proxy/: Cargo.toml  Dockerfile  README.md
crates/fedhost-proxy/src/: cache.rs  db.rs  geo.rs  handler.rs  invalidation.rs  main.rs  metrics.rs  storage.rs
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  FEDERATION.md  FEDERATION_PROTOCOL.md  HONEST_ASSESSMENT.md  INCIDENT_RESPONSE.md  PRODUCTION_CHECKLIST.md  SELF_HOSTING.md  UPGRADE.md  grafana-dashboard.json
e2e/: deploy.spec.ts  health.spec.ts  helpers.ts
lib/api-spec/: openapi.yaml
lib/db/: drizzle.config.ts  package.json
lib/db/migrations/: 0000_initial_schema.sql  README.md
lib/db/src/: index.ts
lib/db/src/schema/: access.ts  (+17 more)
scripts/: package.json
scripts/src/: push-to-github.ts  seed.ts
sites/nexushosting-landing/: app.js  index.html  style.css
(+94 files in other folders)
