[package]
name = "fedhost-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance reverse proxy for Federated Hosting static site serving"
license = "MIT"
repository = "https://github.com/The-No-Hands-company/Federated-Hosting"
authors = ["The No Hands Company <dev@nohands.company>"]

# This crate is not published to crates.io — it is deployed as a binary
# alongside the TypeScript API server.

[[bin]]
name = "fedhost-proxy"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "trace", "timeout"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "io-util"] }

# S3 / object storage
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# PostgreSQL (read-only — domain → siteId lookups)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.12"

# Redis (LRU cache sharing with TypeScript nodes)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "aio"] }
futures-util = "0.3"

# Ed25519 (verify federation signatures — same keypairs as TS node)
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
base64 = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"

# Configuration
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# Utilities
anyhow = "1"
thiserror = "1"
bytes = "1"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true        # strip debug symbols — smaller binary for Pi deployment
panic = "abort"     # smaller binary, no unwinding

[profile.dev]
opt-level = 0
debug = true
